--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   app:
     build:
@@ -10,35 +11,27 @@ services:
       - MONGODB_URI=${MONGODB_URI}
       - PORT=3000
     depends_on:
-      mongo:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/tasks"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - mongo
     volumes:
       - .:/app
       - /app/node_modules
     networks:
       - app-network
+
   mongo:
     image: mongo:6.0
     ports:
       - "27017:27017"
     environment:
       - MONGO_INITDB_DATABASE=task-manager
-    healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
     volumes:
       - mongo-data:/data/db
     networks:
       - app-network
+
 volumes:
   mongo-data:
+
 networks:
   app-network:
     driver: bridge
