--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   app:
-    image: ${DOCKER_USERNAME}/task-manager-app:${DOCKER_TAG}
+    image: ${DOCKER_USERNAME}/task-manager-app:latest
     ports:
       - "3000:3000"
     environment:
